--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        "./src",
-        "-p",
-        "*test*.py"
-    ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true,
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
+    "python.linting.pylintPath": "pylint",
     "python.linting.pylintArgs": [
         "--disable=C0111"
     ],
     "python.autoComplete.extraPaths": [
-        "${workspaceFolder}/.venv/lib/python3.10/site-packages"
+        "${workspaceFolder}/__pypackages__/3.10/lib"
     ],
     "python.analysis.extraPaths": [
-        "${workspaceFolder}/.venv/lib/python3.10/site-packages"
+        "${workspaceFolder}/__pypackages__/3.10/lib"
     ],
+    "python.testing.pytestArgs": [
+        "src",
+        "--ignore",
+        "__pypackages__",
+        "-s"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
