--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = ""
 authors = [
     {name = "João Otávio", email = "joaotavioos@outlook.com"},
 ]
-dependencies = []
+dependencies = [
+    "djangorestframework>=3.13.1",
+]
 requires-python = ">=3.10.2"
 license = {text = "MIT"}
 [project.optional-dependencies]
