--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "djangorestframework>=3.13.1",
+    "pytest-cov>=3.0.0",
 ]
 requires-python = ">=3.10.2"
 license = {text = "MIT"}
@@ -23,4 +24,16 @@ dev = [
     "pylint>=2.15.2",
     "autopep8>=1.7.0",
     "pytest>=7.1.3",
+]
+
+[tool.pdm.scripts]
+pep8 = "autopep8 --in-place --recursive ./src"
+pylint = "pylint ./src"
+test = "pytest --ignore __pypackages__"
+test_cov = "pdm run test --cov ./src --cov-fail-under 80"
+test_cov_html = "pdm run test_cov --cov-report html:./__coverage"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+ "ignore::django.utils.deprecation.RemovedInDjango50Warning"
 ]
