--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dev = [
     "pytest>=7.1.3",
     "pytest-cov>=3.0.0",
     "pytest-django>=4.5.2",
+    "model-bakery>=1.7.0",
 ]
 
 [tool.pdm.scripts]
