--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = django_app.settings
 filterwarnings = ignore::django.utils.deprecation.RemovedInDjango50Warning
-addops = --no-migrations --reuse-db
+addopts = --no-migrations --reuse-db
