feat: add Rest Client in dev-container ✨

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,8 @@
 	"extensions": [
 		"ms-python.python",
 		"sourcery.sourcery",
-		"bungcip.better-toml"
+		"bungcip.better-toml",
+		"humao.rest-client"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
